--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ p{
     word-wrap: break-word;
     line-height: 35px;
     margin: 30px 0;
+    opacity: 0;
+}
+.fade{
+    opacity: 1;
+    transition: opacity 1.5s;
 }
 button{
     display: block;
